fixed align issu

--- a/styles/main.style.scss
+++ b/styles/main.style.scss
@@ -123,7 +123,7 @@ footer {
 .services{
   @apply w-full ;
   .service{
-    @apply flex  max-sm:flex-col items-center   max-md:px-10 px-20 ;
+    @apply flex  max-sm:flex-col items-center justify-between  max-md:px-10 px-20 ;
     .img{
       @apply w-[346px] ;
     }
